# extended-mypy-django-plugin

./: .gitignore  DEVELOPMENT.rst  README.rst  dev  mypy.ini  pyproject.toml  test.sh
.github/workflows/: release.yml
djangoexample/: views.py
djangoexample/exampleapp/: models.py
djangoexample/settings/: __init__.py  base.py
docs/: index.rst
docs/api/: changelog.rst  installation.rst  tracking-changes.rst  usage.rst
example/: pyproject.toml
example/djangoexample/: settings.py  views.py
extended_mypy_django_plugin/: annotations.py  entry.py  main.py  plugin.py
extended_mypy_django_plugin/_plugin/: _entry.py  analyze.py  annotation_resolver.py  entry.py  hook.py  plugin.py  protocols.py  sem_analyze.py  signature_info.py  type_checker.py  virtual_dependencies.py
extended_mypy_django_plugin/django_analysis/: __init__.py  fields.py  models.py  modules.py  project.py  protocols.py
extended_mypy_django_plugin/plugin/: __init__.py  _config.py  _dependencies.py  _plugin.py  _reports.py  _store.py  _virtual_dependencies.py
extended_mypy_django_plugin/scripts/: determine_django_state.py
scripts/: ensure_unique_querysets.py  make_old.patch
scripts/test_helpers/: pyproject.toml
tests/: test_concrete_annotations.py  test_config.py  test_errors.py  test_works.py
tests/django_analysis/: conftest.py  test_analyze_known_models.py  (+4 more)
tools/: .requirements.readthedocs.txt  devtools.py  pyproject.toml  requirements.uv.txt  run.py  venv
tools/example-mypy/: pyproject.toml
tools/example-mypy/example_mypy/: logic.py  main.py  plugin.py  virtual_dependencies.py
(+58 files in other folders)
